fixed the spaces on about section on mobile mod

--- a/fe52704b1b6570b28eb2.css
+++ b/fe52704b1b6570b28eb2.css
@@ -947,9 +947,9 @@ body.fixed .header{
    position: relative;
    width: 100%;
    max-width:100vw;
-   height: 100vh;
-   padding: 0px 0px 465px;
-   float: none;
+   height: 0;
+   margin-top: -267px;
+   margin-bottom: -267px;
   }
 }
 .about-section .box-section .box-mp4 video{
